[feat]: add get favorite ids
